# qdpi

./: .gitignore  AGENTS.md  DESIGN-SPEC.md  README.md  pyproject.toml
examples/: config.yaml
examples/templates/: AGENTS.md.j2  Makefile.j2
src/qdpi/: __main__.py  cli.py
src/qdpi/config/: loader.py  models.py
src/qdpi/core/: environment.py  git.py  template.py
src/qdpi/registry/: registry.py
src/qdpi/tui/: app.py
src/qdpi/tui/screens/: branch_select.py  confirmation.py  name_input.py  repo_select.py
src/qdpi/utils/: github.py  paths.py  symlinks.py
